--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Cypress practices",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "openSesame": "cypress open",
+    "runSesame": "cypress run"
   },
   "repository": {
     "type": "git",
